modified security config for register